--- a/launcher_config.json
+++ b/launcher_config.json
@@ -24,6 +24,6 @@ NOTE: Set it to "false" or only "" to not use the client folder, so everything w
 		}
 	],
 	"clientFolder": "Tibia",
-	"newClientUrl" : "https://github.com/opentibiabr/canary-launcher/releases/download/1.0.0/client-to-update.zip",
+	"newClientUrl" : "https://raw.githubusercontent.com/paczielny/testlauncher/main/launcher_config.json",
 	"clientExecutable": "client.exe"
 }
