--- a/launcher_config.json
+++ b/launcher_config.json
@@ -9,7 +9,7 @@ NOTE: Set it to "false" or only "" to not use the client folder, so everything w
 • executable The path to the client's executable file, represented as "bin/client.exe"
 */
 {
-	"clientVersion": "13.32.14521",
+	"clientVersion": "13.32.14522",
 	"launcherVersion": "1.0",
 	"replaceFolders": true,
 	"replaceFolderName": [
@@ -24,6 +24,6 @@ NOTE: Set it to "false" or only "" to not use the client folder, so everything w
 		}
 	],
 	"clientFolder": "Tibia",
-	"newClientUrl" : "https://raw.githubusercontent.com/paczielny/testlauncher/main/launcher_config.json",
+	"newClientUrl" : "https://github.com/paczielny/testlauncher/releases/download/v1.0.0/client-to-update.zip",
 	"clientExecutable": "client.exe"
 }
